# drafttool

./: TODO.md  run  shell.nix
client/: common.css  config.css  config.js  config.ts  draft.css  draft.html  draft.ts  index.html
server/: Cargo.toml
server/src/: cards.rs  cockatrice.rs  draft.rs  main.rs  scryfall.rs  xml.rs
server/src/cards/: cockatrice.rs  mod.rs  scryfall.rs
server/src/draft/: game.rs  handlers.rs  mod.rs  packs.rs  server.rs
