[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
